--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?user=postgres&password=kt0610
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?user=postgres&password=kaninchen
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
