--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ build/
 /.mvn/wrapper/maven-wrapper.properties
 /.mvn/wrapper/MavenWrapperDownloader.java
 /src/main/resources/application-dev.properties
+/src/main/resources/application-prod.properties
