--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,4 @@ build/
 /.mvn/wrapper/maven-wrapper.jar
 /.mvn/wrapper/maven-wrapper.properties
 /.mvn/wrapper/MavenWrapperDownloader.java
-!/src/main/resources/application-dev.properties
-!/src/main/resources/application-prod.properties
+/src/main/resources/application-dev.properties
